# nex5file

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py  index.rst  modules.rst  nex5file.rst  notes.txt
nex5file/: filedata.py  headers.py  reader.py  variables.py  writer.py
tests/: test_filedata.py  test_reader.py  test_variables.py  test_writer.py
