[project]
name = "nex5file"
version = "0.1.1"
authors = [{ name="Alex Kirillov", email="alex@neuroexplorer.com" },]
description = "Read and write .nex and .nex5 files and edit data stored in .nex and .nex5 files."
keywords = ["NeuroExplorer", "nex", "nex5", ".nex", ".nex5"]
readme ={file = 'README.md', content-type='text/markdown'}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dependencies = ["numpy",]


[project.urls]
homepage = "https://github.com/NeuroExplorer/nex5file"
documentation = "https://www.neuroexplorer.com/docs/reference/scripting/index.html"
repository = "https://github.com/NeuroExplorer/nex5file"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
